# python_in_educative_course

./: README.md  array.npy  pyproject.toml
.github/: dependabot.yml
Dynamic Programming in Python/: Memorização.py  limitação_da_programação_dinamica_de_cima_para_baixo.py  problemas_praticos.py  recursão.py
Dynamic Programming in Python/Recursão/: recursão.py
Predictive Data Analysis with Python/: guia_numpy.py  transposição_de_matriz_numpy.py
Predictive Data Analysis with Python/Data Wrangling/: agrupamento_e_agregação_de_dados.py  air.csv  desafio_tratandos_os_dados.py  modelando_dados.py  um_pouco_sobre_csv.py  valores_discrepantes.py
Predictive Data Analysis with Python/Visualizing the Data/: boxplot.py  desafio.py  ferramentas_de_visualização.py  graficos_regressão.py  heatmaps.py  histogramas.py  scatter_e_kde.py
Predictive Data Analysis with Python/numpy/: criação_e_indexação_de_matrix_no_numpy.py  desafio_numpy.py  processando_matrizes_numpy.py
Predictive Data Analysis with Python/pandas/: pandas_classificação.py  pandas_dados_perdidos_e_mais_algumas_funções.py  pandas_dataframe.py  pandas_desafio.py  pandas_reindexar.py  pandas_series.py
tests/: test_test.py
