[tool.poetry]
name = "PYTHON_IN_EDUCATIVE_COURSE"
version = "0.1.0"
description = "Curso da Educative sobre Python"
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"