[tool.poetry]
name = "PYTHON_IN_EDUCATIVE_COURSE"
version = "0.1.0"
description = "Curso da Educative sobre Python"
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"